qmidiarp-0.6.6 (2020-12-??)

New Features
  o LFO: New control for phase of calculated waveforms (Matthew McGuire)
  o Global Store: Added Loop count property to storage locations. This
    is accessible via the context menu of each location button

Improvements
  o LFO and SEQ: More size and resolution values including odd values
    Although there is compatibility check in place for saved sessions,
    this may lead to wrong values for saved LV2 states if someone
    uses this at all.
    Long sequences only make sense for lower resolution. Drawing would
    not be possible with high resolutions and lengths.
  o SEQ: Improved display of loop marker
  o SEQ: Increased lower octave transpose range
  o Global Store: Preferences option to choose whether to store mute states

Fixed Bugs:
  o Regression: Arp strayed in notes with zero velocity
  o LV2: restored compatibility with suil > 0.10.2
  o Crash when session managers tried to save/restore empty session
  o Regression with application of compact widget style
  o Regression when reading files with time module index -1
  o Output port count could not be changed on commandline
  

qmidiarp-0.6.5 (2017-12-17)

Improvements
  o MIDI OMNI Mode receiving on all MIDI channels is now available and
    even default for all modules.
  o Arp: Some more 'factory' patterns added to the LV2 presets and to
    the .qmidiarprc file. Latter requires deleting the original one in 
    the home directory and launching the standalone application.
  o Arp: New pattern repeat mode "As Played" for following the played
    note order instead of reorganizing them up, down or random. 
  o Arp: For deliberately clearing buffered incoming notes the modules
    now all react to ALL_NOTES_OFF and ALL_SOUND_OFF MIDI messages.
  o LV2: The DSP ("generic") parameter interface has gotten some 
    improvements for better usability (thanks Holger Wirtz for input on 
    this)

Fixed Bugs: